# linuxdo-macos

./: .gitignore  DESIGN.md  LICENSE  PRODUCT.md  README.md  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tsconfig.node 2.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts
.github/workflows/: release.yml
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json  remote-bridge.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  menu.rs
src/main/: index.ts  ipc.ts
src/main/auth/: loginWindow.ts  session.ts
src/main/network/: engine.ts  messagebus.ts  scheduler.ts
src/preload/: index.d.ts  index.ts
src/renderer/: index.html
src/renderer/src/: App.module.css  App.tsx  api.d.ts  main.tsx
src/renderer/src/components/composer/: Composer.module.css  Composer.tsx  DiscardBar.module.css  EmojiPicker.module.css  EmojiPicker.tsx  InlineAutocomplete.module.css  InlineAutocomplete.tsx  NewTopicModal.module.css  NewTopicModal.tsx  TagsInput.module.css  TagsInput.tsx  useDiscardGuard.tsx
src/renderer/src/components/palette/: CommandPalette.module.css  CommandPalette.tsx
src/renderer/src/components/ui/: Avatar.module.css  Avatar.tsx  Button.module.css  Button.tsx  CategoryBadge.module.css  CategoryBadge.tsx  ErrorBoundary.module.css  ErrorBoundary.tsx  Field.module.css  Field.tsx  IconButton.module.css  IconButton.tsx  InfiniteSentinel.tsx  Lightbox.module.css  Lightbox.tsx  LoginGate.tsx  Menu.module.css  Menu.tsx  Modal.module.css  Modal.tsx  Segmented.module.css  Segmented.tsx  SpriteIcon.tsx  Tag.module.css  Tag.tsx  Toaster.module.css  Toaster.tsx  card.module.css  listRow.module.css  states.module.css  states.tsx
src/renderer/src/components/window/: NotificationBell.module.css  NotificationBell.tsx  PageScaffold.module.css  PageScaffold.tsx  Sidebar.module.css  Sidebar.tsx  Toolbar.module.css  Toolbar.tsx
src/renderer/src/features/ai/: AiBotPage.module.css  AiBotPage.tsx
src/renderer/src/features/badges/: BadgesPage.module.css  BadgesPage.tsx
src/renderer/src/features/bookmarks/: BookmarksPage.module.css  BookmarksPage.tsx
src/renderer/src/features/categories/: CategoriesPage.module.css  (+3 more)
src/renderer/src/lib/: commands.ts  emoji.ts  errors.ts  format.ts  fuzzy.ts  markdown.ts  nav.tsx  oneboxPreview.ts  shortcuts.ts  svgSprite.ts  tagIcons.ts  tauriBridge.ts  useBackNav.ts  useDraftAutosave.ts  useFocusMemory.ts  useListNav.ts  useScrollMemory.ts  useSwipeBack.ts
src/renderer/src/store/: auth.ts  composer.ts  lightbox.ts  palette.ts  recents.ts  settings.ts  toast.ts  updater.ts
src/renderer/src/styles/: cooked.css  global.css  tokens.css
src/shared/: api.ts
(+61 files in other folders)
