[package]
name = "linuxdo"
version = "0.1.0"
description = "A native-feeling macOS client for linux.do (Discourse)"
authors = ["linuxdo-macos"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["sync", "time"] }
url = "2"
