[package]
name = "linuxdo"
version = "0.1.0"
description = "A native-feeling macOS client for linux.do (Discourse)"
authors = ["linuxdo-macos"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# The Dock/Cmd-Tab label for the UNBUNDLED dev binary is the executable's
# filename (the embedded Info.plist is ignored for that), so the bin target
# carries the product name. Spaces are illegal in cargo target names, hence
# the CamelCase. Bundled builds were always named correctly. NOTE: renaming
# the binary re-keys the dev WebKit cookie jar (process-name fallback) — one
# re-login in dev after this change.
[[bin]]
name = "OhMyLinuxDo"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tokio = { version = "1", features = ["sync", "time"] }
url = "2"
rsa = { version = "0.9", features = ["pem"] }
rand = "0.8"
base64 = "0.22"
